@@ -39,5 +39,6 @@ PHP_FUNCTION(is_object);
 PHP_FUNCTION(is_scalar);
 PHP_FUNCTION(is_callable);
 PHP_FUNCTION(is_iterable);
+PHP_FUNCTION(is_countable);
 
 #endif
